--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -5,30 +5,30 @@ main:
   - name: Home
     url: /
     weight: 10
-  - name: Documentation
-    url: docs/
+  - name: Recipes
+    url: recipes/
     weight: 20
-  - name: Blog
+  - name: Restaurants
     url: blog/
     weight: 30
-  - name: Showcase
-    url: showcase/
-    weight: 40
-  - name: Community
-    url: community/
-    weight: 50
+  # - name: Showcase
+  #   url: showcase/
+  #   weight: 40
+  # - name: Community
+  #   url: community/
+  #   weight: 50
 
-sidebar:
-  - identifier: more
-    name: Still need help?
-    params:
-      type: separator
-    weight: 1
-  - identifier: community
-    name: "Community"
-    pageRef: "/community"
-    weight: 2
-  - identifier: hugoDocs
-    name: "Hugo Docs ↗"
-    url: "https://docs.hugoblox.com"
-    weight: 3
+# sidebar:
+#   - identifier: more
+#     name: Still need help?
+#     params:
+#       type: separator
+#     weight: 1
+#   - identifier: community
+#     name: "Community"
+#     pageRef: "/community"
+#     weight: 2
+#   - identifier: hugoDocs
+#     name: "Hugo Docs ↗"
+#     url: "https://docs.hugoblox.com"
+#     weight: 3
